# kafka-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
examples/: simple_producer.rs
src/: broker.rs  client.rs  clitask.rs  codec.rs  error.rs  lib.rs
