[package]
name = "kafka-rs"
description = "Native Rust Kafka client, built upon kafka-protocol-rs and Tokio."
version = "0.3.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
repository = "https://github.com/thedodd/kafka-rs"
readme = "README.md"
categories = ["api-bindings", "asynchronous"]
keywords = ["kafka", "streaming", "message-queue", "async"]
rust-version = "1.76.0"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
arc-swap = { version = "1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
kafka-protocol = { version = "0.9", default-features = false }
socket2 = { version = "0.5", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["io-util", "rt", "net", "macros", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec", "net", "time", "rt"] }
tracing = { version = "0.1", default-features = false, features = ["std", "log", "attributes"] }
uuid = { version = "1", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
